--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
+/* general */
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+*,
+*:after,
+* :before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
 /* purgecss start ignore */
 @tailwind base;
 @tailwind components;
